# note that we don't use a build script because it makes static analysis impossible

[package]
name = "pancake-db-idl"
version = "0.0.0-alpha.0"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
description = "API specification for PancakeDB"
homepage = "https://pancakedb.com"
keywords = ["pancake", "idl", "protobuf"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-idl/"

[dependencies]
protobuf = "3.0.0-alpha.1"
