# note that we don't use a build script because it makes static analysis impossible

[package]
name = "pancake-db-idl"
version = "0.2.0"
edition = "2018"

authors = ["PancakeDB <inquiries@pancakedb.com>"]
description = "API specification for PancakeDB"
homepage = "https://pancakedb.com"
keywords = ["pancake", "idl", "protobuf"]
license = "Apache-2.0"
repository = "https://github.com/pancake-db/pancake-idl/"

[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"
tonic = {version = "0.6.2", optional = true}

[features]
service = ["tonic"]
